fix: improve css to prevent horizontal scrollbar

--- a/english-for-kids/src/css/_flip-switch.scss
+++ b/english-for-kids/src/css/_flip-switch.scss
@@ -2,6 +2,7 @@
   position: relative;
   width: 100px;
   height: 40px;
+  margin-right: 40px;
   user-select: none;
 }
 
